# soulgraph

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DECISIONS.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: demo-script-apr4.md  pre-demo-qa-checklist.md
scripts/: pre-commit
soulgraph/: __init__.py  api.py  checkpoint.py  cli.py  config.py  report.py  router.py  state.py  supervisor.py  tracing.py  tune_params.py  tuner.py
soulgraph/agents/: __init__.py  evaluator.py  rag.py  tool_agent.py
tests/: conftest.py  test_acceptance_criteria.py  test_api.py  test_checkpoint.py  test_cli.py  test_config.py  test_evaluator.py  test_rag_agent.py  test_report.py  test_router.py  test_supervisor.py  test_tool_agent.py  test_tracing.py  test_tuner.py
web/: PERFORMANCE.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
web/scripts/: mock-ws.ts
web/src/: App.tsx  app.css  main.tsx
web/src/__mocks__/: chat.ts  documentViewer.ts  evalReport.ts  graphViz.ts  tunerDashboard.ts
web/src/components/: BANNER-COMPONENT-SPECS.md  ChatInterface.tsx  DocumentViewer.tsx  ErrorBoundary.tsx  EvalReport.tsx  GraphViz.tsx  Layout.tsx  MessageBubble.tsx  MessageList.tsx  QueryInput.tsx  SessionSidebar.tsx  Skeleton.tsx  TunerDashboard.tsx
web/src/hooks/: useGraph.ts  useSessions.ts  useTuner.ts
web/src/lib/: api.ts  types.ts  ws.ts
web/tests/components/: App.test.tsx  ChatInterface.test.tsx  DocumentViewer.test.tsx  ErrorBoundary.test.tsx  EvalReport.test.tsx  GraphViz.test.tsx  Layout.test.tsx  MessageBubble.test.tsx  MessageList.test.tsx  QueryInput.test.tsx  SessionSidebar.test.tsx  Skeleton.test.tsx  TunerDashboard.test.tsx
web/tests/e2e/: a11y-regression.spec.ts  chat-flow.spec.ts  error-states.spec.ts  graph-viz.spec.ts  responsive.spec.ts  sessions.spec.ts  tuner.spec.ts
web/tests/helpers/: factories.ts  mock-ws.ts  render.tsx  setup.ts  smoke.test.ts
(+5 files in other folders)
