[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soulgraph"
version = "0.1.0"
description = "Batteries-included LangGraph multi-agent service: RAG + Evaluation + Orchestration"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Rishav Chatterjee", email = "rishav.chatt@gmail.com"}
]
keywords = ["langgraph", "rag", "multi-agent", "llm", "evaluation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "langgraph>=0.2",
    "langchain>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-community>=0.3",
    "chromadb>=0.5",
    "redis>=5.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "ragas>=0.2",
    "datasets>=3.0",
    "pydantic>=2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    # Phase 2 additions — after existing dependencies
    "litellm>=1.30",
    "langgraph-checkpoint-redis>=0.0.4",
    "langsmith>=0.1",
    "langfuse>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "httpx>=0.27",
    "anyio>=4.0",
    "websockets>=12.0",
]

[project.scripts]
soulgraph = "soulgraph.cli:main"
soulgraph-api = "soulgraph.api:main"
soulgraph-tune = "soulgraph.cli:tune_main"

[tool.setuptools.packages.find]
where = ["."]
include = ["soulgraph*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=soulgraph --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
